--- a/TestNGProject/test-output/emailable-report.html
+++ b/TestNGProject/test-output/emailable-report.html
@@ -8,10 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">covertdclass</th></tr>
-<tr><td><a href="#t0">Test1</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">156</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">covertdclass</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TestNG1.TestNG1.AnotationParameters</td><td><a href="#m0">Hiturl</a></td><td rowspan="1">1766330549629</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">LaunchBrowser</a></td><td rowspan="3">1766330549607</td><td rowspan="3">3</td></tr><tr class="passedeven"><td><a href="#m2">LaunchBrowser</a></td></tr><tr class="passedeven"><td><a href="#m3">LaunchBrowser</a></td></tr></tbody>
 </table>
-<h2>Test1</h2></body>
+<h2>Default test</h2><h3 id="m0">TestNG1.TestNG1.AnotationParameters#Hiturl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestNG1.TestNG1.AnotationParameters#LaunchBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestNG1.TestNG1.AnotationParameters#LaunchBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestNG1.TestNG1.AnotationParameters#LaunchBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
 </html>
